k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/verification
            pathType: Prefix
            backend:
              service:
                name: verification-service
                port:
                  number: 5000

          - path: /api/issuances
            pathType: Prefix
            backend:
              service:
                name: issuance-service
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
